--- a/packages/editor/adf-utils/package.json
+++ b/packages/editor/adf-utils/package.json
@@ -34,7 +34,7 @@
     "internal": true
   },
   "dependencies": {
-    "@atlaskit/editor-common": "^23.0.0"
+    "@atlaskit/adf-schema": "^1.0.0"
   },
   "devDependencies": {
     "@atlaskit/docs": "^6.0.0",
