--- a/packages/editor/editor-common/package.json
+++ b/packages/editor/editor-common/package.json
@@ -33,8 +33,8 @@
     "@types/prosemirror-model": "^1.5.0",
     "@types/prosemirror-state": "^1.2.0",
     "@types/prosemirror-view": "^1.3.0",
-    "ajv": "^4.11.3",
     "classnames": "^2.2.5",
+    "css-color-names": "0.0.4",
     "date-fns": "^1.29.0",
     "prosemirror-model": "^1.6.1",
     "prosemirror-view": "^1.6.7",
@@ -49,14 +49,11 @@
   "devDependencies": {
     "@atlaskit/editor-json-transformer": "^4.0.25",
     "@atlaskit/editor-test-helpers": "^6.3.2",
-    "@atlaskit/json-schema-generator": "^1.2.0",
     "@atlaskit/media-core": "^24.6.0",
     "@atlaskit/webdriver-runner": "^0.1.0",
     "@types/chai": "^4.0.4",
-    "axios": "^0.17.1",
     "chai": "^4.1.2",
     "enzyme": "^3.7.0",
-    "json-schema-diff-validator": "^0.2.0",
     "prosemirror-state": "^1.2.2",
     "raf-stub": "^2.0.1",
     "react": "^16.4.0",
