--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typecheck": "                           yarn run typecheck:flow && yarn run typecheck:typescript",
     "typecheck:flow": "                      flow check --max-warnings=0",
     "typecheck:typescript": "                tsc --noEmit --project ./tsconfig.typecheck.json",
+    "measure": "                             measure",
     "website:start": "                       cd website && yarn start",
     "start": "                               yarn run website:start",
     "start:bitbucket": "                     yarn run website:start **/packages/bitbucket/**",
@@ -190,6 +191,7 @@
     "npm-run-all": "^4.1.1",
     "prettier": "^1.14.3",
     "prettier-eslint": "^8.8.2",
+    "pretty-bytes": "^5.1.0",
     "pretty-data": "^0.40.0",
     "projector-cli": "^3.1.0",
     "projector-karma": "projectorjs/projector-karma#e6bf8242b4785460f4840ce0817919c99614ada9",
@@ -339,6 +341,7 @@
     "glob": "^7.1.2",
     "global": "^4.3.2",
     "gray-matter-loader": "^0.0.7",
+    "gzip-size":"^5.0.0",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
@@ -377,6 +380,7 @@
     "minimatch": "^3.0.4",
     "node-yaml": "^3.1.1",
     "npm-run": "^4.1.2",
+    "ora": "^3.0.0",
     "outdent": "^0.5.0",
     "p-wait-for": "^1.0.0",
     "pdfjs-dist": "^2.0.489",
