CHANGESET: 2de906f0. Replace copied popper.js by the actual popper.js library. In addition, mocking popper.js with jest

--- a/package.json
+++ b/package.json
@@ -382,6 +382,7 @@
     "pdfjs-dist": "^2.0.489",
     "png-chunks-extract": "^1.0.0",
     "polished": "1.9.3",
+    "popper.js": "^1.14.1",
     "postis": "^2.2.0",
     "pretty-proptypes": "^0.5.0",
     "prettyjson": "^1.2.1",
