--- a/packages/elements/mention/package.json
+++ b/packages/elements/mention/package.json
@@ -29,8 +29,7 @@
     "babel-runtime": "^6.26.0",
     "js-search": "^1.3.7",
     "tslib": "^1.8.0",
-    "uuid": "^3.1.0",
-    "xregexp": "^3.2.0"
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "@atlaskit/docs": "^6.0.0",
