package.json edited online with Bitbucket

--- a/packages/search/global-search/package.json
+++ b/packages/search/global-search/package.json
@@ -13,7 +13,8 @@
   ],
   "author": "Atlassian Pty Ltd",
   "maintainers": [
-    "David R"
+    "Ahmed Fouad",
+    "Patrick Teen"
   ],
   "atlaskit": {
     "name": "Global search",
