RELEASING: Releasing 15 package(s)
Releases:
  @atlaskit/adf-schema@1.0.0
  @atlaskit/adf-utils@5.4.0
  @atlaskit/editor-bitbucket-transformer@4.1.0
  @atlaskit/editor-common@24.0.0
  @atlaskit/editor-confluence-transformer@5.1.0
  @atlaskit/editor-core@91.1.0
  @atlaskit/editor-jira-transformer@5.1.0
  @atlaskit/editor-json-transformer@4.1.0
  @atlaskit/editor-markdown-transformer@2.1.0
  @atlaskit/editor-test-helpers@6.3.3
  @atlaskit/editor-wikimarkup-transformer@2.8.0
  @atlaskit/renderer@32.1.0
  @atlaskit/conversation@11.1.6
  @atlaskit/editor-mobile-bridge@6.4.10
  @atlaskit/task-decision@11.0.10

Dependents:
  []

Deleted:
  []

---
{"releases":[{"name":"@atlaskit/adf-schema","commits":["1205725"],"version":"1.0.0"},{"name":"@atlaskit/adf-utils","commits":["1205725"],"version":"5.4.0"},{"name":"@atlaskit/editor-bitbucket-transformer","commits":["1205725"],"version":"4.1.0"},{"name":"@atlaskit/editor-common","commits":["1205725"],"version":"24.0.0"},{"name":"@atlaskit/editor-confluence-transformer","commits":["1205725"],"version":"5.1.0"},{"name":"@atlaskit/editor-core","commits":["1205725"],"version":"91.1.0"},{"name":"@atlaskit/editor-jira-transformer","commits":["1205725"],"version":"5.1.0"},{"name":"@atlaskit/editor-json-transformer","commits":["1205725"],"version":"4.1.0"},{"name":"@atlaskit/editor-markdown-transformer","commits":["1205725"],"version":"2.1.0"},{"name":"@atlaskit/editor-test-helpers","commits":["1205725"],"version":"6.3.3"},{"name":"@atlaskit/editor-wikimarkup-transformer","commits":["1205725"],"version":"2.8.0"},{"name":"@atlaskit/renderer","commits":["1205725"],"version":"32.1.0"},{"name":"@atlaskit/conversation","commits":["1205725"],"version":"11.1.6"},{"name":"@atlaskit/editor-mobile-bridge","commits":["1205725"],"version":"6.4.10"},{"name":"@atlaskit/task-decision","commits":["1205725"],"version":"11.0.10"}],"changesets":[{"commit":"1205725","summary":"- Move schema to its own package"}]}
---

[skip ci]

--- a/packages/editor/adf-schema/package.json
+++ b/packages/editor/adf-schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atlaskit/adf-schema",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Shared package that contains the ADF-schema (json) and ProseMirror node/mark specs",
   "license": "Apache-2.0",
   "atlaskit:src": "src/index.ts",
@@ -36,12 +36,12 @@
     "prosemirror-view": "^1.6.7"
   },
   "devDependencies": {
-    "@atlaskit/editor-json-transformer": "^4.0.22",
-    "@atlaskit/editor-test-helpers": "^6.3.1",
+    "@atlaskit/editor-json-transformer": "^4.1.0",
+    "@atlaskit/editor-test-helpers": "^6.3.3",
     "@atlaskit/json-schema-generator": "^1.2.0",
-    "json-schema-diff-validator": "^0.2.0",
     "ajv": "^4.11.3",
-    "axios": "^0.17.1"
+    "axios": "^0.17.1",
+    "json-schema-diff-validator": "^0.2.0"
   },
   "repository": "https://bitbucket.org/atlassian/atlaskit-mk-2"
 }
