--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -285,7 +285,7 @@ pipelines:
                 - source ./build-setup.sh
                 - git merge master --no-edit
                 - bolt install --pure-lockfile
-                - LANKDID=true bolt test:webdriver:browserstack:changed
+                - LANKDID=true yarn test:webdriver:browserstack:changed
       - step:
           name: Wait until no master is running
           script:
