--- a/packages/media/media-card/package.json
+++ b/packages/media/media-card/package.json
@@ -50,6 +50,7 @@
     "styled-components": "^3.2.6"
   },
   "devDependencies": {
+    "@atlaskit/build-utils": "^2.1.0",
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/field-radio-group": "^4.0.14",
