--- a/package.json
+++ b/package.json
@@ -214,7 +214,7 @@
     "svg-sprite": "^1.3.6",
     "svg-url-loader": "^2.3.0",
     "thread-loader": "^1.2.0",
-    "ts-jest": "^23.10.5",
+    "ts-jest": "23.1.4",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.6.0",
@@ -340,7 +340,7 @@
     "glob": "^7.1.2",
     "global": "^4.3.2",
     "gray-matter-loader": "^0.0.7",
-    "gzip-size":"^5.0.0",
+    "gzip-size": "^5.0.0",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
