--- a/packages/core/theme/package.json
+++ b/packages/core/theme/package.json
@@ -19,6 +19,7 @@
   "repository": "https://bitbucket.org/atlassian/atlaskit-mk-2",
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "exenv": "^1.2.2",
     "prop-types": "^15.5.10"
   },
   "peerDependencies": {
