--- a/packages/media/media-card/package.json
+++ b/packages/media/media-card/package.json
@@ -39,7 +39,7 @@
     "react-lazily-render": "^1.1.0",
     "tslib": "^1.8.0",
     "uuid": "^3.1.0",
-    "video-snapshot": "^1.0.2"
+    "video-snapshot": "^1.0.3"
   },
   "peerDependencies": {
     "@atlaskit/media-core": "^24.6.0",
@@ -62,6 +62,7 @@
     "@types/classnames": "^2.2.6",
     "deepcopy": "0.6.3",
     "enzyme": "^3.7.0",
+    "exenv": "^1.2.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.2",
     "react-intl": "^2.6.0",
