--- a/packages/media/media-picker/package.json
+++ b/packages/media/media-picker/package.json
@@ -40,6 +40,7 @@
     "bricks.js": "^1.8.0",
     "dateformat": "^1.0.12",
     "eventemitter2": "^4.1.0",
+    "exenv": "^1.2.2",
     "filesize": "^3.2.1",
     "lodash.debounce": "^4.0.8",
     "postis": "^2.2.0",
@@ -62,6 +63,7 @@
   },
   "devDependencies": {
     "@atlaskit/analytics-listeners": "^4.1.4",
+    "@atlaskit/build-utils": "^2.1.0",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/media-core": "^24.6.0",
     "@atlaskit/media-test-helpers": "^18.6.2",
