--- a/packages/media/media-filmstrip/package.json
+++ b/packages/media/media-filmstrip/package.json
@@ -32,6 +32,7 @@
     "styled-components": "^3.2.6"
   },
   "devDependencies": {
+    "@atlaskit/build-utils": "^2.1.0",
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/checkbox": "^5.0.9",
     "@atlaskit/docs": "^6.0.0",
