--- a/packages/media/media-avatar-picker/package.json
+++ b/packages/media/media-avatar-picker/package.json
@@ -29,6 +29,7 @@
     "@atlaskit/modal-dialog": "^7.1.1",
     "@atlaskit/spinner": "^9.0.13",
     "@atlaskit/util-shared-styles": "^2.10.3",
+    "exenv": "^1.2.2",
     "tslib": "^1.8.0"
   },
   "peerDependencies": {
@@ -37,6 +38,7 @@
     "styled-components": "^3.2.6"
   },
   "devDependencies": {
+    "@atlaskit/build-utils": "^2.1.0",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/media-test-helpers": "^18.5.2",
     "@atlaskit/page": "^8.0.12",
