--- a/packages/media/media-store/package.json
+++ b/packages/media/media-store/package.json
@@ -25,6 +25,7 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@atlaskit/build-utils": "^2.1.0",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/media-card": "^45.0.0",
     "@atlaskit/media-test-helpers": "^18.6.2",
