--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "test:update": "                         node ./build/jest-config/index.js -u",
     "test:watch": "                          node ./build/jest-config/index.js --watch",
     "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) node ./build/jest-config/index.js",
+    "test:dependents:direct": "              CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js direct-dependencies) yarn jest",
+    "test:dependents:all": "                 CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js all-dependencies) yarn jest",
     "test:browser": "                        projector ./projector testBrowser",
     "test:browser:watch": "                  projector ./projector testBrowser --watch",
     "test:browser:browserstack": "           projector ./projector testBrowserCI --browserstack",
