--- a/packages/people-and-teams/profilecard/package.json
+++ b/packages/people-and-teams/profilecard/package.json
@@ -9,7 +9,8 @@
   "module": "dist/esm/index.js",
   "atlaskit:src": "src/index.js",
   "files": [
-    "dist"
+    "dist",
+    "index.d.ts"
   ],
   "scripts": {
     "build:flow": "bolt workspaces exec --only \"@atlaskit/profilecard\" -- flow-copy-source -v -i '**/__tests__/**' src dist/esm/src",
