--- a/packages/media/media-picker/package.json
+++ b/packages/media/media-picker/package.json
@@ -65,6 +65,7 @@
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/media-core": "^24.6.0",
     "@atlaskit/media-test-helpers": "^18.6.2",
+    "@atlaskit/media-viewer": "^28.0.0",
     "@atlaskit/toggle": "^5.0.14",
     "@atlaskit/webdriver-runner": "^0.1.0",
     "@types/dateformat": "^1.0.1",
