--- a/packages/media/media-picker/package.json
+++ b/packages/media/media-picker/package.json
@@ -67,6 +67,7 @@
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/media-core": "^24.7.2",
     "@atlaskit/media-test-helpers": "^18.7.2",
+    "@atlaskit/media-viewer": "^29.0.2",
     "@atlaskit/toggle": "^5.0.14",
     "@atlaskit/webdriver-runner": "^0.1.0",
     "@types/dateformat": "^1.0.1",
