--- a/packages/core/form/package.json
+++ b/packages/core/form/package.json
@@ -6,6 +6,7 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "atlaskit:src": "src/index.js",
+  "atlaskit:designLink": "https://atlassian.design/guidelines/product/patterns/forms",
   "sideEffects": false,
   "files": [
     "dist"
