--- a/packages/media/media-avatar-picker/package.json
+++ b/packages/media/media-avatar-picker/package.json
@@ -45,6 +45,7 @@
     "@types/enzyme": "^3.1.15",
     "enzyme": "^3.7.0",
     "react": "^16.4.0",
+    "react-dom": "^16.4.2",
     "react-intl": "^2.6.0"
   }
 }
