--- a/packages/media/media-core/package.json
+++ b/packages/media/media-core/package.json
@@ -39,6 +39,7 @@
     "@atlaskit/media-card": "^46.0.0",
     "@atlaskit/media-test-helpers": "^18.7.0",
     "@types/uuid-validate": "^0.0.0",
+    "react-dom": "^16.4.2",
     "rxjs": "^5.5.0",
     "sinon": "^2.2.0",
     "styled-components": "^3.2.6"
