--- a/packages/media/media-ui/package.json
+++ b/packages/media/media-ui/package.json
@@ -69,6 +69,7 @@
     "enzyme-adapter-react-16": "^1.7.0",
     "jsverify": "^0.8.3",
     "react": "^16.4.0",
+    "react-dom": "^16.4.2",
     "react-intl": "^2.6.0"
   }
 }
