--- a/packages/media/media-viewer/package.json
+++ b/packages/media/media-viewer/package.json
@@ -57,6 +57,7 @@
     "@types/sinon-chai": "^2.7.27",
     "enzyme": "^3.7.0",
     "jsverify": "^0.8.3",
+    "react-dom": "^16.4.2",
     "react-intl": "^2.6.0",
     "sinon-chai": "^2.9.0"
   }
