--- a/packages/media/media-store/package.json
+++ b/packages/media/media-store/package.json
@@ -32,6 +32,7 @@
     "@atlaskit/media-test-helpers": "^18.7.0",
     "@types/fetch-mock": "^6.0.3",
     "fetch-mock": "^6.5.2",
+    "react": "^16.4.0",
     "react-dom": "^16.4.2",
     "whatwg-fetch": "^2.0.3"
   },
