--- a/packages/core/form/package.json
+++ b/packages/core/form/package.json
@@ -24,6 +24,7 @@
     "@babel/runtime": "^7.0.0",
     "final-form": "^4.10.0",
     "final-form-focus": "^1.1.0",
+    "memoize-one": "^3.0.1",
     "shallow-equal": "^1.0.0",
     "tiny-invariant": "^0.0.3",
     "uuid": "^3.1.0"
