--- a/package.json
+++ b/package.json
@@ -220,8 +220,8 @@
     "tslint-config-prettier": "^1.6.0",
     "tslint-react": "^3.2.0",
     "tty-table": "^2.6.8",
-    "typescript": "~3.1.0",
     "ttypescript": "^1.5.5",
+    "typescript": "~3.1.0",
     "uid": "^0.0.2",
     "url-loader": "^1.0.1",
     "validator": "^9.4.1",
@@ -255,6 +255,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/dateformat": "^1.0.1",
     "@types/eventemitter2": "^4.1.0",
+    "@types/exenv": "^1.2.0",
     "@types/filesize": "^3.2.15",
     "@types/jquery": "^2.0.41",
     "@types/lodash.debounce": "^4.0.4",
