--- a/packages/elements/emoji/package.json
+++ b/packages/elements/emoji/package.json
@@ -39,6 +39,7 @@
     "@atlaskit/media-core": "^24.7.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.2",
+    "react-intl": "^2.6.0",
     "rxjs": "^5.5.0"
   },
   "author": "Atlassian Pty Ltd",
@@ -53,6 +54,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@atlaskit/docs": "^6.0.0",
+    "@atlaskit/i18n-tools": "^0.4.0",
     "@atlaskit/layer": "^5.0.10",
     "@atlaskit/media-core": "^24.7.0",
     "@atlaskit/section-message": "^1.0.14",
@@ -64,11 +66,13 @@
     "chai": "^4.1.2",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
+    "enzyme-react-intl": "^2.0.3",
     "es6-promise": "^4.0.5",
     "fetch-mock": "^6.5.2",
     "p-wait-for": "^1.0.0",
     "react": "^16.4.0",
     "react-addons-perf": "^15.3.2",
+    "react-intl": "^2.6.0",
     "rxjs": "^5.5.0",
     "sinon": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
