--- a/packages/media/smart-card/package.json
+++ b/packages/media/smart-card/package.json
@@ -17,6 +17,9 @@
   ],
   "repository": "https://bitbucket.org/atlassian/atlaskit-mk-2",
   "dependencies": {
+    "@atlaskit/analytics-gas-types": "^3.2.3",
+    "@atlaskit/analytics-next": "^3.1.2",
+    "@atlaskit/analytics-next-types": "^3.1.2",
     "@atlaskit/icon": "^15.0.2",
     "@atlaskit/icon-file-type": "^3.0.2",
     "@atlaskit/icon-object": "^3.0.2",
