--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -103,23 +103,23 @@ pipelines:
               - LOCAL_IDENTIFIER=$(date +%s) BS_RETRY=5 BS_BUILD_ALLOWED=3 node build/ci-scripts/run.tool.if.changed.js webdriver -- node build/ci-scripts/wait.for.browserstack.resources.js && yarn test:webdriver:browserstack:changed
             caches:
               - node
-        - step:
-            name: Building website
-            script:
-              - source ./build-setup.sh
-              - bolt install --pure-lockfile
-              - cd website
-              # This next line just makes it so we can skip website builds by having a branch name that starts with "skip-website/"
-              - if [[ "$BITBUCKET_BRANCH" == skip-website/* ]]; then echo "Skipping website build" && mkdir dist && echo "Build skipped" > dist/index.html; else WEBSITE_ENV=staging yarn build:no-minimize; fi
-              - yarn build:copy
-              - set -o pipefail # make sure we fail if the deployment fails
-              # we pipe the output to stdout AND deploy-log.txt so that we can read the live url
-              - yarn deploy:staging | tee deploy-log.txt
-              - cat deploy-log.txt | grep "Live Draft Url:" | sed -e "s/Live Draft Url..//" > netlify-link.txt
-              - echo "Uploading netlify build link to s3 so that we can fetch at the end..."
-              - node ../build/ci-scripts/upload.build.artefact.for.commit.js netlify-link.txt
-            caches:
-              - node
+        # - step:
+        #     name: Building website
+        #     script:
+        #       - source ./build-setup.sh
+        #       - bolt install --pure-lockfile
+        #       - cd website
+        #       # This next line just makes it so we can skip website builds by having a branch name that starts with "skip-website/"
+        #       - if [[ "$BITBUCKET_BRANCH" == skip-website/* ]]; then echo "Skipping website build" && mkdir dist && echo "Build skipped" > dist/index.html; else WEBSITE_ENV=staging yarn build:no-minimize; fi
+        #       - yarn build:copy
+        #       - set -o pipefail # make sure we fail if the deployment fails
+        #       # we pipe the output to stdout AND deploy-log.txt so that we can read the live url
+        #       - yarn deploy:staging | tee deploy-log.txt
+        #       - cat deploy-log.txt | grep "Live Draft Url:" | sed -e "s/Live Draft Url..//" > netlify-link.txt
+        #       - echo "Uploading netlify build link to s3 so that we can fetch at the end..."
+        #       - node ../build/ci-scripts/upload.build.artefact.for.commit.js netlify-link.txt
+        #     caches:
+        #       - node
     - step:
         name: Sending Website Build Url
         script:
