--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -120,14 +120,14 @@ pipelines:
         #       - node ../build/ci-scripts/upload.build.artefact.for.commit.js netlify-link.txt
         #     caches:
         #       - node
-    - step:
-        name: Sending Website Build Url
-        script:
-          - (cd build/utils && yarn install) # needed for npm-run when updating status
-          - cd build/ci-scripts
-          - yarn install
-          - node download.build.artefact.for.commit.js netlify-link.txt
-          - node update.build.status.with.netlify.link.js
+    # - step:
+    #     name: Sending Website Build Url
+    #     script:
+    #       - (cd build/utils && yarn install) # needed for npm-run when updating status
+    #       - cd build/ci-scripts
+    #       - yarn install
+    #       - node download.build.artefact.for.commit.js netlify-link.txt
+    #       - node update.build.status.with.netlify.link.js
 
   custom: # Pipelines that can be scheduled or triggered manually
     # This should only be called by a scheduled build
