--- a/packages/elements/status/package.json
+++ b/packages/elements/status/package.json
@@ -49,6 +49,7 @@
     "react-intl": "^2.6.0"
   },
   "scripts": {
-    "i18n:push": "i18n-tools push --resource status . --type ts"
+    "i18n:push": "i18n-tools push --resource status . --type ts",
+    "i18n:pull": "i18n-tools pull --resource status . --type ts"
   }  
 }
