--- a/packages/elements/reactions/package.json
+++ b/packages/elements/reactions/package.json
@@ -75,7 +75,8 @@
     "url": "https://bitbucket.org/atlassian/atlaskit-mk-2"
   },
   "scripts": {
-    "i18n:push": "i18n-tools push --resource reactions . --type ts"
+    "i18n:push": "i18n-tools push --resource reactions . --type ts",
+    "i18n:pull": "i18n-tools pull --resource reactions . --type ts"
   },
   "keywords": [
     "fabric",
