--- a/website/package.json
+++ b/website/package.json
@@ -53,7 +53,7 @@
     "@atlaskit/navigation": "^33.3.8",
     "@atlaskit/page": "^8.0.12",
     "@atlaskit/quick-search": "^5.2.4",
-    "@atlaskit/single-select": "^6.0.11",
+    "@atlaskit/select": "^6.1.15",
     "@atlaskit/spinner": "^9.0.13",
     "@atlaskit/tag": "^6.1.3",
     "@atlaskit/tag-group": "^6.0.8",
