RELEASING: Releasing 1 package(s)
Releases:
  @atlaskit/share@0.1.0

Dependents:
  []

Deleted:
  []

---
{"releases":[{"name":"@atlaskit/share","commits":["891e116"],"version":"0.1.0"}],"changesets":[{"commit":"891e116","summary":"- FS-3291 add share skeleton"}]}
---

[skip ci]

--- a/packages/elements/share/package.json
+++ b/packages/elements/share/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atlaskit/share",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "config": {
     "access": "private"
   },
@@ -28,8 +28,7 @@
     "fabric",
     "elements"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": "^16.4.0",
     "react-intl": "^2.6.0"
