--- a/packages/people-and-teams/focused-task-close-account/package.json
+++ b/packages/people-and-teams/focused-task-close-account/package.json
@@ -10,6 +10,10 @@
   "files": [
     "dist"
   ],
+  "scripts": {
+    "i18n:push": "i18n-tools push --resource focused-task-close-account . --type ts",
+    "i18n:pull": "i18n-tools pull --resource focused-task-close-account . --type ts"
+  },
   "dependencies": {
     "@atlaskit/avatar": "^14.1.7",
     "@atlaskit/button": "^10.1.1",
@@ -22,7 +26,9 @@
   },
   "devDependencies": {
     "@atlaskit/checkbox": "^5.0.9",
-    "@atlaskit/docs": "^6.0.0"
+    "@atlaskit/docs": "^6.0.0",
+    "@atlaskit/i18n-tools": "^0.4.0",
+    "react-intl": "^2.6.0"
   },
   "author": "Atlassian Pty. Ltd",
   "maintainers": [
