--- a/packages/media/media-picker/package.json
+++ b/packages/media/media-picker/package.json
@@ -65,10 +65,10 @@
     "@atlaskit/analytics-listeners": "^4.1.4",
     "@atlaskit/build-utils": "^2.1.0",
     "@atlaskit/docs": "^6.0.0",
-    "@atlaskit/media-viewer": "^29.0.0",
     "@atlaskit/media-core": "^24.7.2",
     "@atlaskit/media-test-helpers": "^18.7.3",
     "@atlaskit/media-viewer": "^29.0.2",
+    "@atlaskit/select": "^6.1.15",
     "@atlaskit/toggle": "^5.0.14",
     "@atlaskit/webdriver-runner": "^0.1.0",
     "@types/dateformat": "^1.0.1",
