--- a/packages/core/modal-dialog/package.json
+++ b/packages/core/modal-dialog/package.json
@@ -22,8 +22,10 @@
     "@atlaskit/analytics-next": "^3.1.2",
     "@atlaskit/blanket": "^7.0.12",
     "@atlaskit/button": "^10.1.1",
+    "@atlaskit/form": "^5.1.0",
     "@atlaskit/icon": "^15.0.2",
     "@atlaskit/portal": "^0.0.17",
+    "@atlaskit/textfield": "^0.1.5",
     "@atlaskit/theme": "^7.0.1",
     "@babel/runtime": "^7.0.0",
     "exenv": "^1.2.2",
