--- a/packages/editor/editor-mobile-bridge/package.json
+++ b/packages/editor/editor-mobile-bridge/package.json
@@ -35,7 +35,7 @@
     "@babel/polyfill": "^7.0.0",
     "@types/prosemirror-view": "^1.3.0",
     "prosemirror-state": "^1.2.2",
-    "prosemirror-view": "1.6.8"
+    "prosemirror-view": "^1.6.8"
   },
   "peerDependencies": {
     "react": "^16.4.0",
