--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -169,7 +169,7 @@ pipelines:
             # To fix, you'll need to install the missing dependencies and the latest Chromium package in your Dockerfile:
             - source ./build/visual-regression/puppeteer.sh
             - source ./build-setup.sh
-            - bolt install --pure-lockfile
+            - yarn install
             # Install puppeteer so it's available in the container.
             # Even if it is present in the package.json
             # For further details see: https://github.com/GoogleChrome/puppeteer/blob/master/docs/troubleshooting.md
