--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -167,9 +167,9 @@ pipelines:
             # getting headless Chrome up and running in Docker can be tricky.
             # The bundled Chromium that Puppeteer installs is missing the necessary shared library dependencies.
             # To fix, you'll need to install the missing dependencies and the latest Chromium package in your Dockerfile:
-            - source ./build/visual-regression/puppeteer.sh
+            # - source ./build/visual-regression/puppeteer.sh
             - source ./build-setup.sh
-            - yarn install
+            - bolt install --pure-lockfile
             # Install puppeteer so it's available in the container.
             # Even if it is present in the package.json
             # For further details see: https://github.com/GoogleChrome/puppeteer/blob/master/docs/troubleshooting.md
