--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -174,7 +174,7 @@ pipelines:
             # Even if it is present in the package.json
             # For further details see: https://github.com/GoogleChrome/puppeteer/blob/master/docs/troubleshooting.md
             # - yarn add puppeteer
-            - yarn test:vr
+            - yarn test:vr button
           caches:
             - node
       # This will run essentially the branch builds, but without any optimizations and should be manually
