--- a/packages/media/media-editor/package.json
+++ b/packages/media/media-editor/package.json
@@ -27,18 +27,24 @@
     "@atlaskit/spinner": "^9.0.6",
     "@atlaskit/theme": "^7.0.2",
     "@atlaskit/util-shared-styles": "^2.10.3",
-    "tslib": "^1.8.0"
+    "@types/uuid": "^3.4.4",
+    "tslib": "^1.8.0",
+    "uuid": "^3.1.0"
   },
   "peerDependencies": {
     "@atlaskit/media-core": "^24.7.1",
     "react": "^16.4.0",
-    "styled-components": "^3.2.6"
+    "styled-components": "^3.2.6",
+    "react-intl": "^2.6.0",
+    "rxjs": "^5.5.0"
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.1.0",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/media-core": "^24.7.1",
     "@atlaskit/media-test-helpers": "^18.7.1",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-intl": "^2.6.0",
+    "rxjs": "^5.5.0"
   }
 }
