--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -166,6 +166,7 @@ pipelines:
             - node
       # This will run with the visual regression tool
     build-visual-regression:
+      image: atlassianlabs/atlaskit-mk-2:visual-regression
       - step:
           script:
             - source ./build-setup.sh
