--- a/packages/media/media-picker/package.json
+++ b/packages/media/media-picker/package.json
@@ -80,6 +80,7 @@
     "@types/redux": "^3.6.0",
     "chai": "^4.1.2",
     "enzyme": "^3.7.0",
+    "fetch-mock": "^6.5.2",
     "identity-obj-proxy": "^3.0.0",
     "lodash.chunk": "^4.2.0",
     "react": "^16.4.0",
@@ -87,6 +88,7 @@
     "react-dom": "^16.4.2",
     "react-intl": "^2.6.0",
     "rxjs": "^5.5.0",
-    "sinon": "^2.2.0"
+    "sinon": "^2.2.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
