--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -167,7 +167,7 @@ pipelines:
     # This will run with the visual regression tool
     build-visual-regression:
       - step:
-          image: atlassianlabs/atlaskit-mk-2:visual-regression
+          image: atlassianlabs/atlaskit-mk-2:vr-1.0.5
           script:
             - source ./build-setup.sh
             - bolt install --pure-lockfile
