--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -167,7 +167,9 @@ pipelines:
     # This will run with the visual regression tool
     build-visual-regression:
       - step:
-          image: atlassianlabs/atlaskit-mk-2:vr-1.0.5
+          image: atlassianlabs/atlaskit-mk-2-vr:1.0.5
+          options:
+            size: 2x
           script:
             - source ./build-setup.sh
             - bolt install --pure-lockfile
