--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -165,7 +165,7 @@ pipelines:
           script:
             - source ./build-setup.sh
             - bolt install --pure-lockfile
-            - yarn test:vr
+            - yarn test:vr:changed
           caches:
             - node
       # This will run essentially the branch builds, but without any optimizations and should be manually
