Flow to run in Alpine

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -53,7 +53,7 @@ pipelines:
               - node build/ci-scripts/run.tool.if.changed.js eslint -- yarn lint:eslint
               - node build/ci-scripts/run.tool.if.changed.js tslint -- yarn lint:tslint
               - node build/ci-scripts/run.tool.if.changed.js stylelint -- yarn lint:stylelint
-              - node build/ci-scripts/run.tool.if.changed.js flow -- yarn typecheck:flow
+              - node build/ci-scripts/run.tool.if.changed.js flow -- yarn typecheck:flow:ci
               - node build/ci-scripts/run.tool.if.changed.js typescript -- yarn typecheck:typescript
               # Get the commit that we diverged from master at
               - export DIVERGED_AT=$(git merge-base master HEAD)
