Add see if the script works in CI

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "lint:tslint:supporting": "              tslint-config-prettier-check ./tslint.supporting.json && tslint -c ./tslint.supporting.json --format stylish 'packages/*/*/+(tests|__tests__|examples|docs|example-helpers)/**/*.(ts|tsx)' 'packages/*/*/src/**/__tests__/**/*.+(ts|tsx)'",
     "typecheck": "                           yarn run typecheck:flow && yarn run typecheck:typescript",
     "typecheck:flow": "                      flow check --max-warnings=0",
-    "typecheck:flow:ci": "                   ./usr/bin/flow check --max-warnings=0",
+    "typecheck:flow:ci": "                   cd .. && ./usr/bin/flow check --max-warnings=0",
     "typecheck:typescript": "                tsc --noEmit --project ./tsconfig.typecheck.json",
     "measure": "                             measure",
     "website:start": "                       cd website && yarn start",
