--- a/packages/elements/share/package.json
+++ b/packages/elements/share/package.json
@@ -29,6 +29,7 @@
     "elements"
   ],
   "dependencies": {
+    "@atlaskit/analytics-next-types": "^3.1.2",
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/icon": "^15.0.3",
     "@atlaskit/inline-dialog": "^9.0.13"
