--- a/packages/elements/share/package.json
+++ b/packages/elements/share/package.json
@@ -32,7 +32,8 @@
     "@atlaskit/analytics-next-types": "^3.1.2",
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/icon": "^15.0.3",
-    "@atlaskit/inline-dialog": "^9.0.13"
+    "@atlaskit/inline-dialog": "^9.0.13",
+    "@atlaskit/util-service-support": "^3.0.5"
   },
   "peerDependencies": {
     "react": "^16.4.0",
