--- a/packages/navigation/centralised-app-switcher/package.json
+++ b/packages/navigation/centralised-app-switcher/package.json
@@ -13,14 +13,16 @@
   ],
   "dependencies": {
     "@atlaskit/item": "^8.0.14",
-    "babel-runtime": "^6.26.0",
-    "react": "^16.4.0",
-    "styled-components": "^3.2.6"
+    "babel-runtime": "^6.26.0"
   },
   "devDependencies": {
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/drawer": "^2.6.1",
     "@atlaskit/theme": "^7.0.1"
+  },
+  "peerDependencies": {
+    "react": "^16.4.0",
+    "styled-components": "^3.2.6"
   }
 }
