--- a/packages/core/icon/package.json
+++ b/packages/core/icon/package.json
@@ -42,6 +42,7 @@
     "@atlaskit/icon-build-process": "^0.1.0",
     "@atlaskit/icon-file-type": "^3.0.3",
     "@atlaskit/icon-object": "^3.0.3",
+    "@atlaskit/icon-priority": "^0.0.0",
     "@atlaskit/logo": "^9.2.6",
     "@atlaskit/modal-dialog": "^7.1.1",
     "@atlaskit/section-message": "^1.0.14",
