Adding Jira CustomLinksProvider

--- a/packages/navigation/centralised-app-switcher/package.json
+++ b/packages/navigation/centralised-app-switcher/package.json
@@ -2,7 +2,8 @@
   "name": "centralised-app-switcher",
   "private": true,
   "version": "1.0.1",
-  "main": "index.tsx",
+  "main": "dist/es5/index.js",
+  "module": "dist/es2015/index.js",
   "license": "MIT",
   "author": "Atlassian Pty Ltd",
   "description": "App switcher component for Atlassian products.",
