MVP of editor updater cli

--- a/tsconfig.media.json
+++ b/tsconfig.media.json
@@ -58,5 +58,6 @@
       "./typings/png-chunks-extract.d.ts",
       "./typings/static-assets.d.ts",
       "./typings/utf8-string-bytes.d.ts",
+      "./typings/yarn-deduplicate.d.ts"
     ]
   }
