--- a/packages/elements/share/package.json
+++ b/packages/elements/share/package.json
@@ -29,7 +29,11 @@
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/field-text-area": "^4.0.15",
     "@atlaskit/form": "^5.1.0",
-    "@atlaskit/user-picker": "^1.0.6"
+    "@atlaskit/icon": "^15.0.3",
+    "@atlaskit/inline-dialog": "^9.0.13",
+    "@atlaskit/theme": "^7.0.3",
+    "@atlaskit/user-picker": "^1.0.6",
+    "styled-components": "^3.2.6"
   },
   "peerDependencies": {
     "react": "^16.4.0",
