--- a/packages/editor/adf-schema/package.json
+++ b/packages/editor/adf-schema/package.json
@@ -27,6 +27,7 @@
     "internal": true
   },
   "dependencies": {
+    "@types/linkify-it": "^2.0.4",
     "@types/prosemirror-model": "^1.5.0",
     "@types/prosemirror-state": "^1.2.0",
     "@types/prosemirror-view": "^1.3.0",
