--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,7 +30,7 @@
       "es2015.promise",
       "es2016.array.include"
     ],
-    "types": ["jest", "react","react-router","history", "enzyme", "css-color-names", "jest-styled-components", "styled-components"],
+    "types": ["jest", "react","react-router","history", "enzyme", "css-color-names", "jest-styled-components", "styled-components", "linkify-it"],
     "typeRoots": ["./typings", "./node_modules/@types"]
   },
   "files": [
