--- a/tsconfig.media.json
+++ b/tsconfig.media.json
@@ -31,7 +31,7 @@
         "es2015.iterable",
         "es2015.promise"
       ],
-      "types": ["jest", "react", "enzyme", "css-color-names", "jest-styled-components", "styled-components"],
+      "types": ["jest", "react", "enzyme", "css-color-names", "jest-styled-components", "styled-components", "linkify-it"],
       "typeRoots": ["./typings", "./node_modules/@types"]
     },
     "files": [
