--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -81,6 +81,7 @@ pipelines:
               - TEST_ONLY_PATTERN='!packages/editor' yarn run test:changed --passWithNoTests
               # Run the editor tests (runInBand is required or it fails in CI)
               - TEST_ONLY_PATTERN='packages/editor' yarn run test:changed --runInBand --passWithNoTests
+              - bolt build:run-if-changed
             caches:
               - node
         - step:
