RELEASING: Releasing 1 package(s)
Releases:
  @atlaskit/editor-core@95.0.21

Dependents:
  []

Deleted:
  []

---
{"releases":[{"name":"@atlaskit/editor-core","commits":["6c81bca"],"version":"95.0.21"}],"changesets":[{"commit":"6c81bca","summary":"- ED-6041: fix converting encoded URLs (e.g. URLs with spaces as %20) to smart cards"}]}
---

[skip ci]

enabling lfs

update gitignore

append-to-existing-hooks.sh edited

pre-push script

add prepush and update hooks

make this a command

move all to javascript

move all to javascript

remove redundant script

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "delete:modules": "                      bolt ws exec --parallel -- rm -rf node_modules && rm -rf node_modules",
     "delete:build": "                        bolt ws exec --parallel -- rm -rf dist",
     "precommit": "                           lint-staged",
-    "test": "                                yarn jest",
+    "prepush": "                             ./prepush $HUSKY_GIT_PARAMS <<< $HUSKY_GIT_STDIN",
+    "enable:lfs": "                          node enable-lfs-hooks.js",
+    "test": "                                 yarn jest",
     "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) yarn jest",
     "test:browser": "                        projector ./projector testBrowser",
     "test:browser:watch": "                  projector ./projector testBrowser --watch",
