--- a/packages/media/media-filmstrip/package.json
+++ b/packages/media/media-filmstrip/package.json
@@ -40,6 +40,7 @@
     "@atlaskit/field-range": "^5.0.14",
     "@atlaskit/media-core": "^27.1.0",
     "@atlaskit/media-test-helpers": "^20.1.5",
+    "@types/debounce": "^1.2.0",
     "enzyme": "^3.7.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.2"
