pre-push script

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "delete:modules": "                      bolt ws exec --parallel -- rm -rf node_modules && rm -rf node_modules",
     "delete:build": "                        bolt ws exec --parallel -- rm -rf dist",
     "precommit": "                           lint-staged",
+    "prepush": "                             ./prepush $HUSKY_GIT_PARAMS <<< $HUSKY_GIT_STDIN",
     "test": "                                yarn jest",
     "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) yarn jest",
     "test:browser": "                        projector ./projector testBrowser",
@@ -507,6 +508,11 @@
       "prettier --no-editorconfig --write",
       "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "pre-push-lfs.sh $HUSKY_GIT_PARAMS <<< $HUSKY_GIT_STDIN"
+    }
   },
   "jest-junit": {
     "output": "test-reports/junit.xml"
