--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "delete:build": "                        bolt ws exec --parallel -- rm -rf dist",
     "precommit": "                           lint-staged",
     "prepush": "                             ./prepush $HUSKY_GIT_PARAMS <<< $HUSKY_GIT_STDIN",
-    "test": "                                yarn jest",
+    "enable:lfs": "                          ./enable-lfs-hooks",
+    "test": "                                 yarn jest",
     "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) yarn jest",
     "test:browser": "                        projector ./projector testBrowser",
     "test:browser:watch": "                  projector ./projector testBrowser --watch",
