--- a/packages/editor/embedded-document/package.json
+++ b/packages/editor/embedded-document/package.json
@@ -30,6 +30,7 @@
     "styled-components": "^3.2.6"
   },
   "devDependencies": {
+    "@types/fetch-mock": "^6.0.3",
     "enzyme": "^3.7.0",
     "fetch-mock": "^6.5.2",
     "react": "^16.4.0",
