--- a/packages/media/media-card/package.json
+++ b/packages/media/media-card/package.json
@@ -57,6 +57,7 @@
     "@atlaskit/field-range": "^5.0.12",
     "@atlaskit/field-text": "^7.0.18",
     "@atlaskit/media-core": "^26.1.0",
+    "@atlaskit/media-store": "^9.1.2",
     "@atlaskit/media-test-helpers": "^19.0.0",
     "@atlaskit/toggle": "^5.0.14",
     "@types/classnames": "^2.2.6",
