--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -172,7 +172,7 @@ pipelines:
             # We could optionally upload these to s3 if we wanted, leaving this here as an example
             # - node ../build/ci-scripts/upload.build.artefact.for.commit.js dist/report.html
             # - node ../build/ci-scripts/upload.build.artefact.for.commit.js dist/stats.json
-            - node ./scripts/uploadBundleAnalyticsEvent.ts
+            - node ./scripts/uploadBundleAnalyticsEvent.js
           caches:
             - node
 
