--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -81,7 +81,8 @@ pipelines:
               - TEST_ONLY_PATTERN='!packages/editor' yarn run test:changed --passWithNoTests
               # Run the editor tests (runInBand is required or it fails in CI)
               - TEST_ONLY_PATTERN='packages/editor' yarn run test:changed --runInBand --passWithNoTests
-              - node build/ci-scripts/run.if.package.changed.js @atlaskit/adf-schema -- yarn build:adf-schema:checkuptodate
+              # This script acts like a unit test to check changes to @atlaskit/adf-schema - it is disabled till ED-6082 is fixed
+              # - node build/ci-scripts/run.if.package.changed.js @atlaskit/adf-schema -- yarn build:adf-schema:checkuptodate
             caches:
               - node
         - step:
