--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -38,6 +38,7 @@
     "./typings/deep-equal.d.ts",
     "./typings/deepcopy.d.ts",
     "./typings/events.d.ts",
+    "./typings/fetch-mock.d.ts",
     "./typings/jest-in-case.d.ts",
     "./typings/jest.frameworkSetup.d.ts",
     "./typings/json.d.ts",
@@ -50,6 +51,8 @@
     "./typings/pdfjs-dist.d.ts",
     "./typings/postis.d.ts",
     "./typings/prosemirror-markdown.d.ts",
+    "./typings/p-wait-for.d.ts",
+    "./typings/raf-schd.d.ts",
     "./typings/rusha.d.ts",
     "./typings/scrollparent.d.ts",
     "./typings/snake-case.d.ts",
