--- a/package.json
+++ b/package.json
@@ -113,7 +113,9 @@
     "@types/react-dom": "^16.0.9",
     "@types/react-intl": "^2.3.8",
     "@types/react-syntax-highlighter": "^0.0.3",
+    "@types/react-virtualized": "^9.18.12",
     "@types/uuid-validate": "^0.0.0",
+    "@types/xregexp": "^3.0.29",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
@@ -271,6 +273,7 @@
     "@types/exenv": "^1.2.0",
     "@types/filesize": "^3.2.15",
     "@types/jquery": "^2.0.41",
+    "@types/js-search": "^1.4.0",
     "@types/linkify-it": "^2.0.4",
     "@types/lodash.debounce": "^4.0.4",
     "@types/memoize-one": "^3.0.1",
