--- a/packages/elements/emoji/package.json
+++ b/packages/elements/emoji/package.json
@@ -24,6 +24,7 @@
     "@atlaskit/tooltip": "^12.1.15",
     "@atlaskit/util-common": "^1.5.2",
     "@atlaskit/util-service-support": "^3.0.5",
+    "@types/js-search": "^1.4.0",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.5",
     "js-search": "^1.3.7",
@@ -63,6 +64,7 @@
     "@atlaskit/util-data-test": "^10.0.36",
     "@atlaskit/visual-regression": "^0.0.1",
     "@types/chai": "^4.0.4",
+    "@types/react-virtualized": "^9.18.12",
     "canvas-prebuilt": "^2.0.0-alpha.14",
     "chai": "^4.1.2",
     "enzyme": "^3.7.0",
