--- a/packages/elements/mention/package.json
+++ b/packages/elements/mention/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@atlaskit/docs": "^6.0.1",
+    "@atlaskit/editor-test-helpers": "^6.3.9",
     "@atlaskit/i18n-tools": "^0.4.0",
     "@atlaskit/util-common-test": "^2.4.2",
     "@atlaskit/util-data-test": "^10.0.32",
@@ -39,7 +40,6 @@
     "@types/query-string": "^4.3.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
-    "enzyme-react-intl": "^2.0.3",
     "es6-promise": "^4.0.5",
     "fetch-mock": "^6.5.2",
     "query-string": "^4.3.2",
