--- a/package.json
+++ b/package.json
@@ -297,6 +297,7 @@
     "@types/redux": "^3.6.0",
     "@types/semver": "^5.5.0",
     "@types/sinon-chai": "^2.7.27",
+    "@types/url-search-params": "^0.10.0",
     "@types/uuid": "^3.4.4",
     "abortcontroller-polyfill": "^1.1.9",
     "adf-builder": "^3.2.0",
