--- a/packages/elements/task-decision/package.json
+++ b/packages/elements/task-decision/package.json
@@ -54,6 +54,7 @@
     "@atlaskit/renderer": "^38.0.0",
     "@atlaskit/util-common-test": "^2.4.2",
     "@atlaskit/util-data-test": "^10.0.36",
+    "@types/url-search-params": "^0.10.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "fetch-mock": "^6.5.2",
