FS-3498 fix @atlaskit/user-picker types

--- a/tsconfig.media.json
+++ b/tsconfig.media.json
@@ -3,6 +3,7 @@
       "allowJs": false,
       "alwaysStrict": true,
       "declaration": true,
+      "downlevelIteration": true,
       "experimentalDecorators": true,
       "importHelpers": true,
       "jsx": "react",
