--- a/package.json
+++ b/package.json
@@ -271,6 +271,7 @@
     "@types/jquery": "^2.0.41",
     "@types/linkify-it": "^2.0.4",
     "@types/lodash.debounce": "^4.0.4",
+    "@types/memoize-one": "^3.0.1",
     "@types/prosemirror-commands": "^1.0.1",
     "@types/prosemirror-history": "^1.0.1",
     "@types/prosemirror-inputrules": "^1.0.2",
