--- a/packages/elements/status/package.json
+++ b/packages/elements/status/package.json
@@ -29,6 +29,7 @@
     "@atlaskit/analytics-gas-types": "^3.2.3",
     "@atlaskit/analytics-next": "^3.1.2",
     "@atlaskit/analytics-next-types": "^3.1.2",
+    "@atlaskit/editor-test-helpers": "^6.3.9",
     "@atlaskit/field-text": "^7.0.18",
     "@atlaskit/icon": "^16.0.0",
     "@atlaskit/lozenge": "^6.2.4",
@@ -44,7 +45,6 @@
     "@atlaskit/i18n-tools": "^0.4.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
-    "enzyme-react-intl": "^2.0.3",
     "react": "^16.4.0",
     "react-intl": "^2.6.0"
   },
