--- a/packages/navigation/centralised-app-switcher/package.json
+++ b/packages/navigation/centralised-app-switcher/package.json
@@ -22,6 +22,7 @@
     "@atlaskit/drawer": "^2.6.1",
     "@atlaskit/navigation": "^33.3.8",
     "@atlaskit/theme": "^7.0.1",
+    "enzyme": "^3.7.0",
     "fetch-mock": "^6.5.2"
   },
   "peerDependencies": {
