updated the description of the avatar package to be a sentence

--- a/packages/core/avatar/package.json
+++ b/packages/core/avatar/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@atlaskit/avatar",
   "version": "14.1.8",
-  "description": "A component that represents a user",
+  "description": "A component that represents a user.",
   "license": "Apache-2.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
