--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -194,7 +194,7 @@ pipelines:
             - source ./build-setup.sh
             - bolt install --pure-lockfile
             # Run it for button now since this is the only pkg with store snapshot
-            - yarn test:vr button
+            - yarn test:vr 
           caches:
             - node
       # This will run essentially the branch builds, but without any optimizations and should be manually
