--- a/packages/core/tree/package.json
+++ b/packages/core/tree/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/button": "^10.1.2",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/icon": "^16.0.0",
     "@atlaskit/navigation": "^33.3.9",
