--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -111,9 +111,9 @@ pipelines:
               - source ./build-setup.sh
               - bolt install --pure-lockfile
              # Run it for button now since this is the only pkg with store snapshot
-              - TEST_ONLY_PATTERN='!packages/editor' yarn run yarn test:vr
+              - TEST_ONLY_PATTERN='!packages/editor' yarn run test:vr:changed
             caches:
-              - node         
+              - node
         - step:
             name: Building website
             script:
